second try to fix the overflowing text

--- a/css/general.css
+++ b/css/general.css
@@ -9,10 +9,10 @@
 
 @media(min-width:1600px){
 	#heyiggy-text > h1 {
-		font-size:64px;
+		font-size:60px;
 	}
 	#heyiggy-text > a {
-		font-size:32px;
+		font-size:30px;
 	}
 }
 
